WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258078
Regression(
264098@main
) HTMLFieldsetElement behavior for :enabled / :disabled CSS selectors is incorrect
https://bugs.webkit.org/show_bug.cgi?id=258078
Summary
Regression(264098@main) HTMLFieldsetElement behavior for :enabled / :disabled...
Chris Dumez
Reported
2023-06-14 08:59:30 PDT
HTMLFieldsetElement behavior for :enabled / :disabled CSS selectors is incorrect since
264098@main
(when sendMouseEventsToDisabledFormControlsEnabled experimental flag is enabled). This is because it updated HTMLFieldSetElement::isDisabledFormControl() to return false. However, the CSS selector should rely on the "actually disabled" state, not the "disabled" state.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-06-14 09:28:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14959
EWS
Comment 2
2023-06-14 14:32:50 PDT
Committed
265166@main
(a6d354d7281c): <
https://commits.webkit.org/265166@main
> Reviewed commits have been landed. Closing PR #14959 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-14 14:33:24 PDT
<
rdar://problem/110799351
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug